--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 alembic==1.16.5
+argon2-cffi==25.1.0
+argon2-cffi-bindings==25.1.0
 bcrypt==5.0.0
 blinker==1.9.0
+cffi==2.0.0
 click==8.1.8
 exceptiongroup==1.3.0
 Flask==3.1.2
@@ -16,6 +19,7 @@ passlib==1.7.4
 pluggy==1.6.0
 psycopg==3.2.10
 psycopg-binary==3.2.10
+pycparser==2.23
 Pygments==2.19.2
 PyJWT==2.10.1
 pytest==8.4.2
